tests/smt2/error/rollback-dont.smt2
(assert false)
(bad)
(check-sat)